<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/mchV">


        <Button
            style="@style/btn"
            android:background="@drawable/button_selector"
            android:onClick="onScan"
            android:text="@string/scan" />

        <TextView
            android:id="@+id/text_blue"
            style="@style/txt"
            android:text="@string/no_blue" />

        <View style="@style/sepL" />
        <!--
                <Button
                    style="@style/btn"
                    android:background="@drawable/button_selector"
                    android:onClick="onSetting"
                    android:text="@string/configure_device" />
                    android:background="@xml/button_selector"
                <TextView style="@style/txt" android:id="@+id/text_send" android:text="@string/nothing"/>

        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView7"
                style="@style/name_txt"
                android:text="@string/device_id" />

            <EditText
                android:id="@+id/device_id"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/device_id"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                style="@style/name_txt"
                android:text="@string/wifi_ssid" />

             <EditText
                android:id="@+id/wifi_ssid"
                style="@style/edit_txt"
                android:layout_width="170dp"
                android:layout_marginStart="5dp"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/wifi_ssid" />
            <Button
                style="@style/btn"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_selector"
                android:onClick="onGetWifiName"
                android:text="@string/now" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                style="@style/name_txt"
                android:text="@string/wifi_password" />

            <EditText
                android:id="@+id/wifipswd"
                android:inputType="textPassword"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:layout_width="190dp"
                android:ems="10"
                android:hint="@string/wifi_password"
                android:importantForAutofill="no" />

            <CheckBox
                android:id="@+id/WPcheckBox"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView5"
                style="@style/name_txt"
                android:text="@string/host_ip" />

            <EditText
                android:id="@+id/host_ip"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/host_ip"
                android:inputType="number"
                android:digits="0123456789."
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView6"
                style="@style/name_txt"
                android:text="@string/device_ip" />

            <EditText
                android:id="@+id/device_ip"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/device_ip"
                android:inputType="number"
                android:digits="0123456789."
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView7"
                style="@style/name_txt"
                android:text="@string/gateway_ip" />

            <EditText
                android:id="@+id/gateway_ip"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/gateway_ip"
                android:inputType="number"
                android:digits="0123456789."
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView8"
                style="@style/name_txt"
                android:text="@string/netmask" />

            <EditText
                android:id="@+id/netmask"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/netmask"
                android:inputType="number"
                android:digits="0123456789."
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView9"
                style="@style/name_txt"
                android:text="@string/device_password" />

            <EditText
                android:id="@+id/devicepswd"

                android:inputType="textPassword"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:layout_width="190dp"
                android:ems="10"
                android:hint="@string/device_password"
                android:importantForAutofill="no" />

            <CheckBox
                android:id="@+id/DPcheckBox"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView7"
                style="@style/name_txt"
                android:text="@string/low_power_text" />

            <EditText
                android:id="@+id/low_power"
                style="@style/edit_txt"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/low_power_text"
                android:inputType="number"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textlock"
                style="@style/name_txt"
                android:text="@string/lock" />

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center">

                <Switch
                    android:id="@+id/devicelock"
                    style="@style/name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="60dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textdhcp"
                style="@style/name_txt"
                android:text="@string/dhcp" />

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center">

                <Switch
                    android:id="@+id/dhcp"
                    style="@style/name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="60dp" />
            </LinearLayout>

        </LinearLayout>

<!--        <Button-->
<!--            style="@style/btn"-->
<!--            android:background="@drawable/button_selector"-->
<!--            android:onClick="onGetWifiName"-->
<!--            android:text="@string/get_wifi_ssid" />-->

        <Button
            style="@style/btn"
            android:background="@drawable/button_selector"
            android:onClick="onLoad"
            android:text="@string/load_config" />

        <Button
            style="@style/btn"
            android:background="@drawable/button_selector"
            android:onClick="onSave"
            android:text="@string/save_config" />

        <Button
            style="@style/btn"
            android:background="@drawable/button_selector"
            android:onClick="onUpload"
            android:text="@string/upload_config" />
        <Button
            style="@style/btn"
            android:background="@drawable/button_selector"
            android:onClick="onClean"
            android:text="@string/formatting" />

    </LinearLayout>

</ScrollView>